<?xml version="1.0" encoding="utf-8"?>
    <androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_launcher_background" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:background="@drawable/rounded_rect_top">

        <com.utalli.RobotoRegularTextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/color_blue"
            android:textSize="18sp"
            android:text="@string/text_login"/>

        <com.utalli.RobotoRegularEditText
            android:id="@+id/et_mobileNumber"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/color_blue"
            android:textCursorDrawable="@color/color_blue"
            android:textSize="14sp"
            android:inputType="phone"
            android:singleLine="true"
            android:padding="15dp"
            android:hint="@string/hint_mobile_number"/>

        <com.utalli.RobotoRegularEditText
            android:id="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_mobileNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/color_blue"
            android:textCursorDrawable="@color/color_blue"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:padding="15dp"
            android:hint="@string/hint_password"/>

        <ImageView
            android:id="@+id/iv_password_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/et_password"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintRight_toRightOf="@+id/et_password"
            android:src="@drawable/eye_hide"
            android:padding="12dp"
            />

        <com.utalli.RobotoRegularTextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            android:text="@string/text_forgot_pass"
            android:paddingLeft="16dp"
            android:paddingTop="13dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:textSize="13sp"
            android:textColor="@color/colorPrimary"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

      <!--  <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/cl_up"
            app:layout_constraintTop_toTopOf="cl_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >-->

        <!--app:layout_constraintTop_toTopOf="cl_up"-->
            <com.utalli.RobotoRegularTextView
                android:id="@+id/tv_login_btn"
                app:layout_constraintTop_toBottomOf="@+id/cl_up"
                android:layout_width="0dp"
                android:background="@drawable/rounded_rect_bottom"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:text="@string/text_log_in"/>

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.utalli.RobotoRegularTextView
        android:id="@+id/tv_new_user"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_center"
        app:layout_constraintRight_toLeftOf="@+id/tv_signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textSize="14sp"
        android:text="@string/text_new_user"/>

    <com.utalli.RobotoRegularTextView
        android:id="@+id/tv_signUp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_center"
        app:layout_constraintLeft_toRightOf="@+id/tv_new_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/color_blue"
        android:gravity="bottom"
        android:textSize="14sp"
        android:text="@string/text_sign_up"/>

</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>