<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="80dp"
                android:background="@drawable/rounded_rect_top">

            <com.utalli.RobotoRegularTextView
                    android:id="@+id/tv_recovery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textColor="@color/color_blue"
                    android:textSize="18sp"
                    android:text="@string/text_recovery"/>

            <com.utalli.RobotoRegularTextView
                    android:id="@+id/tv_do_verification_by_mobileno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_recovery"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="12sp"
                    android:text="@string/text_we_will_do_verification_by_mobile_number"/>


            <com.utalli.RobotoRegularEditText
                    android:id="@+id/et_mobileNumber"
                    app:layout_constraintTop_toBottomOf="@+id/tv_do_verification_by_mobileno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/color_blue"
                    android:textCursorDrawable="@color/color_blue"
                    android:textSize="14sp"
                    android:padding="15dp"
                    android:hint="@string/hint_enter_your_mobile_number"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--app:layout_constraintTop_toTopOf="cl_up"-->
        <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@+id/cl_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_rect_bottom">

            <com.utalli.RobotoRegularTextView
                    android:id="@+id/tv_send_otp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/text_send_otp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>